# postgres-from-row

./: Cargo.toml  LICENSE  README.md  pre-deploy.sh
postgres-from-row-derive/: Cargo.toml
postgres-from-row-derive/src/: lib.rs
src/: lib.rs
tests/: integration.rs
