[package]
name = "postgres-from-row"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["postgres-from-row-derive"]

[features]
default = ["postgres"]
postgres = ["dep:postgres"]
tokio-postgres = ["dep:tokio-postgres"]

[dependencies]
tokio-postgres = { version = "0.7.7", default_features = false, optional = true }
postgres = { version = "0.19.4", default_features = false, optional = true }
postgres-from-row-derive = { path = "postgres-from-row-derive" }
