[package]
name = "postgres-from-row"
version = "0.1.0"
authors = ["Remo Pas <remo.pas22@gmail.com>"]
edition = "2021"
description = "Derivable trait that allows converting a postgres row to a struct"
documentation = "https://docs.rs/postgres-from-row"
repositoty = "https://github.com/remkop22/postgres-from-row"
homepage = "https://github.com/remkop22/postgres-from-row"
readme = "README.md"
license-file = "LICENSE"
keywords = ["postgres", "postgres-tokio", "postgresql", "from-row", "mapper"]
categories = ["database", "parsing", "data-structures"]

[workspace]
members = ["postgres-from-row-derive"]

[features]
default = ["postgres"]
postgres = ["dep:postgres"]
tokio-postgres = ["dep:tokio-postgres"]

[dependencies]
tokio-postgres = { version = "0.7.7", default_features = false, optional = true }
postgres = { version = "0.19.4", default_features = false, optional = true }
postgres-from-row-derive = { path = "postgres-from-row-derive" }
