[package]
name = "postgres-from-row"
description = "Derivable trait that allows converting a postgres row to a struct"
documentation = "https://docs.rs/postgres-from-row"
readme = "README.md"
version.workspace = true
authors.workspace = true 
edition.workspace = true
repository.workspace = true 
homepage.workspace = true 
license-file.workspace = true
keywords.workspace = true
categories.workspace = true 

[workspace]
members = ["postgres-from-row-derive"]

[workspace.package]
version = "0.1.0"
authors = ["Remo Pas <remo.pas22@gmail.com>"]
edition = "2021"
repository = "https://github.com/remkop22/postgres-from-row"
homepage = "https://github.com/remkop22/postgres-from-row"
license-file = "LICENSE"
keywords = ["postgres", "postgres-tokio", "postgresql", "from-row", "mapper"]
categories = ["database", "parsing", "data-structures"]

[workspace.dependencies]
postgres-from-row-derive = { path = "postgres-from-row-derive", version = "=0.1.0" }

[features]
default = ["postgres"]
postgres = ["dep:postgres"]
tokio-postgres = ["dep:tokio-postgres"]

[dependencies]
tokio-postgres = { version = "0.7.7", default_features = false, optional = true }
postgres = { version = "0.19.4", default_features = false, optional = true }
postgres-from-row-derive.workspace = true
