[package]
name = "postgres-from-row-derive"
description = "Internal proc-macro crate for postgres-from-row"
version.workspace = true
authors.workspace = true 
edition.workspace = true
repository.workspace = true 
homepage.workspace = true 
license-file.workspace = true
keywords.workspace = true
categories.workspace = true 



[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
darling = "0.14.1"
proc-macro2 = "1.0.47"
